- strtoimax(), strtoumax(), strtod(), strtof(), strtol(), strtoll(),
  strtoul() and strtoull() now count how many digits were converted.
  If that number is zero, then the conversion is considered to have
  failed: 0 is returned and the 'ptr' parameter reference is initialized
  with a pointer to the string to be converted. This has two consequences:

     1) A floating point number that has no digits in the significand
        is no longer converted to zero. For example ".e10" can no longer
        result in a successful conversion.

     2) You can detect if a conversion is successful by comparing pointers
        after the conversion function has returned:

           char * str;
           char * ptr;
           long n;

           n = strtol(str,&ptr,10);
           if(n == 0 && str == ptr)
              printf("conversion has failed");

- Following detection of a stack overflow, the startup code eventually
  called _exit(). It should have called exit() instead.

- tmpnam() wrote more than L_tmpnam bytes to the name buffer. Also, the
  TMP_MAX value was off by one.


c.lib 1.195 (3.9.2005)

- In __time_delay() the CheckIO() test was wrong and should have
  tested for a request still in progress. Fixed.

- Modified select() to support plain files, too. The new code now
  compares the current file position against the current file size,
  if that file is on a file system, or simply checks if there is
  any data in the file (which works for the default PIPE: device).

- The raw file descriptor structure member fd_Position is now
  always updated, regardless of whether the file supports random
  access or not.

- The wildcard escape character used in __wildcard_expand_init() was
  wrong. It should have been "'" but it was "`". Fixed.

- The startup code now references the linker symbol generated for
  the user-supplied main() function.

- log(+/-0), logb(+/-0), log10(+/-0) now return -infinity.

- getcwd() now considers a buffer size of 0 an error, and it sets